--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,3 +18,13 @@ jobs:
           cache: 'gradle'
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Archive build artifacts
+        if: success()
+        run: |
+          mkdir -p build-archive
+          cp -r build/libs/* build-archive/
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: mod-artifacts
+          path: build-archive/
